[project]
name = "eagle_spirit_modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "matplotlib>=3.10.0",
    "mkdocs>=1.6.1",
    "networkx>=3.4.2",
    "plotly>=5.24.1",
    "pysonar-scanner>=0.2.0.520",
    "ruff>=0.8.4",
    "streamlit>=1.41.1",
]
