[project]
name = "eaglespiritmodeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.0",
    "mkdocs>=1.6.1",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "streamlit>=1.41.1",
]
