[project]
name = "modelingsoftware"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=44.0.1",
    "networkx>=3.4.2",
    "plotly>=6.0.0",
    "psycopg2>=2.9.10",
    "pycryptodome>=3.21.0",
    "streamlit>=1.42.2",
]
